--- a/dos33.html
+++ b/dos33.html
@@ -3681,7 +3681,7 @@ With that "legalese" out of the way ... enjoy the read!
                                                                                     ; Gee, we couldn't have put this at $1D00 to save 4 bytes in <a class='v' href='#ADRTAB'>ADRTAB</a> ?!
 2AC1:E8 37          055 <a class="d" id='2AC1' name='AIOB'  >AIOB        </a>DW <a class="v" href="#IOB"     >IOB</a>          ; 5-ADR IOB                     ; Also see <a class='v' href='#BAIOB'>BAIOB</a>; What happened to 1 .. 4 ??? At RVT, WVT ?
 2AC3:BB 33          056 <a class="d" id='2AC3' name='AVTOC' >AVTOC       </a>DW <a class="v" href="#VTOC"    >VTOC</a>         ; 6-ADR VTOC
-2AC5:BB 34          057 <a class="d" id='2AC5' name='AVOLDR'>AVOLDR      </a>DW <a class="v" href="#VOLDIR"  >VOLDIR</a>       ; 7-ADR VOLDIR
+2AC5:BB 34          057 <a class='d' id='2AC5' name='AVOLDR'>AVOLDR      </a>DW <a class="v" href="#VOLDIR"  >VOLDIR</a>       ; 7-ADR VOLDIR
 2AC7:00 40          058 <a class="d" id='2aC7' name='AEND'  >AEND        </a>DW <a class="v" href="#ENDOFDOS">ENDOFDOS</a>     ;END OF DOS                     ; See <a class='v' href='#REPAGE'>REPAGE</a>
                     059 ;                                                           ; File Manager
 2AC9:7E 33          060 <a class='d' id='2AC9' name='CMDVT' >CMDVT       </a>DW <a class='x' href='#GOODIO'>GOODIO</a>-<span class='n'>1</span>     ; 0-NULL                        ; [0] <a class='mem' name='_2AC9' coords='2'>wastes</a> 2 bytes &rarr; $B37E
@@ -4672,9 +4672,9 @@ With that "legalese" out of the way ... enjoy the read!
                     061 ; MVVDBA - MOVE VOL DIR BUF ADR TO IOB
                     062 ;
                     063 <a class='f' id='3045' name='MVVDBA'   >MVVDBA      </a>EQU *
-3045:AD C5 2A       064             LDA AVOLDR
+3045:AD C5 2A       064             LDA <a  class='v' href='#AVOLDR'>AVOLDR</a>
 3048:8D F0 37       065             STA <a  class='v' href='#IBBUFP'>IBBUFP</a>
-304B:AD C6 2A       066             LDA AVOLDR+1
+304B:AD C6 2A       066             LDA <a  class='v' href='#AVOLDR'>AVOLDR</a>+<span class='n'>1</span>
 304E:8D F1 37       067             STA <a  class='v' href='#IBBUFP'>IBBUFP</a>+<span class='n'>1</span>
 3051:60             068             RTS
                     069             PAGE
